# radar_to_mmdet3d

./: .gitignore  Cargo.toml  Dockerfile  README.md
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
assets/model/: armor.onnx  car.onnx
assets/test/: cloud.pcd  test.bag  test_point_clouds.h5
config/: instance.toml  radar.toml  source.toml
scripts/: extract_pointcloud.py  extract_pointclouds.py  generate_pointcloud.py  generate_pointclouds.py  get_rosbag_frame_num.py  get_rosbag_frames.py
src/: align.rs  config.rs  lib.rs  main.rs
src/io/: hdf5.rs  mod.rs  pcd.rs  video.rs
src/radar/: config.rs  locate.rs  mod.rs  undistort.rs
src/radar/detect/: config.rs  mod.rs  process.rs  vis.rs  yolo.rs
src/radar/locate/: cluster.rs  mod.rs
src/ui/: calibrate.rs  mod.rs
tests/: test_align.rs
