[package]
name = "mm3dgen"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25.5"
ndarray = "0.16.1"
ort = { version = "2.0.0-rc.8", features = [ "cuda", "tensorrt", "openvino" ] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter", "fmt" ] }
anyhow = "1.0"
raqote = "0.8.5"
show-image = { version = "0.14.0", features = [ "image", "raqote" ] }
font-kit = "0.14"

[dev-dependencies]
tempfile = "3.3"
assert_approx_eq = "1.1.0"