[package]
name = "radar_to_mmdet3d"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25.5"
ndarray = "0.16.1"
ndarray_015 = { package = "ndarray", version = "0.15.6" }
ort = { version = "2.0.0-rc.8", features = ["cuda", "tensorrt", "openvino"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1.0"
nalgebra = "0.33.2"
chrono = "0.4.38"
serde = { version = "1.0.215", features = ["derive"] }
toml = "0.8.19"
rayon = "1.10.0"
ffmpeg-next = "7.1.0"
hdf5 = "0.8.1"

[dev-dependencies]
tempfile = "3.3"
assert_approx_eq = "1.1.0"
